--- a/cmsc126_le2/templates/base.html
+++ b/cmsc126_le2/templates/base.html
@@ -3,9 +3,11 @@
     <head>
         <title>
             {% block title %}
-                CMSC 126 2nd Long Exam
+                Simple Tweet
             {% endblock%}
         </title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/app.css' %}">
         {% block styles %}{% endblock %}
     </head>
@@ -14,9 +16,12 @@
             {% include "navbar.html" %}
         {% endblock %}
 
+        <div class="container">
         {% block content %}{% endblock %}
-
+        </div>
+        
         <script src="{% static 'js/jquery.js' %}"></script>
+        <script src="{% static 'js/bootstrap.min.js' %}"></script>
         {% block js %}{% endblock %}
         
     </body>
