--- a/cmsc126_le2/templates/navbar.html
+++ b/cmsc126_le2/templates/navbar.html
@@ -1,5 +1,24 @@
-{% if request.user.is_authenticated %}
-    <a href="{% url 'sign_out' %}">Sign Out</a>
-{% else %}
-    <a href="{% url 'sign_in' %}">Sign In</a>
-{% endif %}
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="/">
+        Simple Tweet
+      </a>
+    </div>
+    <div class="navbar-collapse"> 
+        {% if request.user.is_authenticated %}
+            <p class="navbar-text navbar-right">
+                <img src="{{ request.user.profile.avatar_url }}" alt="">
+                <a href="{% url 'profile' request.user.username %}" class="navbar-link">{{ request.user.get_full_name }}</a>
+                <a href="{% url 'sign_out' %}">Sign Out</a>
+            </p>
+        {% else %}
+            <p class="navbar-text navbar-right">
+                <a href="{% url 'sign_in'  %}" class="navbar-link">Sign In</a> |
+                <a href="{% url 'sign_up'  %}" class="navbar-link">Register</a>
+            </p>
+        {% endif %}
+    </div>
+
+  </div>
+</nav>
