--- a/cmsc126_le2/templates/profile.html
+++ b/cmsc126_le2/templates/profile.html
@@ -1,14 +1,29 @@
 {% extends "base.html" %}
 
+{% block title %}
+    {{ user.get_full_name }}'s profile
+{% endblock%}
+
 {% block content %}
-    <img src="{{ user.profile.avatar_url }}" alt="{{ user.get_full_name }} avatar" width="200px">
-    <h1>{{ user.get_full_name }}</h1>
-    <ul>
+    <div class="text-center">
+        <img src="{{ user.profile.avatar_url }}" alt="{{ user.get_full_name }} avatar" width="200px">
+        <h1>{{ user.get_full_name }}</h1>
+        {% if user == request.user %}
+            <a href="{% url 'edit_profile' %}">edit</a>
+        {% endif %}
+    </div>
+    <div class="col-md-6 col-md-offset-3">
         {% for tweet in tweets %}
-            <li>
-                <p>{{ tweet.content }} by {{ tweet.owner.get_full_name }}</p>
-                <p>{{ tweet.when_created|date:'D M d, Y f A' }}</p>
-            </li>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <img src="{{ tweet.owner.profile.avatar_url }}" width="30px">
+                    <a href="{% url 'profile' tweet.owner.username %}">{{ tweet.owner.get_full_name }}</a>
+                    <span class="text-muted">{{ tweet.when_created|date:'D M d, Y f A' }}</span>
+                </div>
+                <div class="panel-body">
+                    <pre>{{ tweet.content }}</pre>
+                </div>
+            </div>
         {% endfor %}
-    </ul>
+    </div>
 {% endblock %}
