--- a/registration/templates/registration/edit_profile.html
+++ b/registration/templates/registration/edit_profile.html
@@ -19,7 +19,7 @@
         <br>
         {{ form.avatar }}
         <br>
-        <button>Save</button>
+        <button class="btn btn-primary">Save</button>
     </form>
 {% endblock %}
 
