--- a/registration/templates/registration/sign_up.html
+++ b/registration/templates/registration/sign_up.html
@@ -5,7 +5,7 @@
         <form action="{% url 'sign_up' %}" method="POST">
             {% csrf_token %}
             {{ form.as_p }}
-            <button>Sign Up</button>
+            <button class="btn btn-primary">Sign Up</button>
         </form>
     {% else %}
         <p>Success <a href="{% url 'sign_in' %}">Sign In</a></p>
